Version 1.4
~~~~~~~~~~~
* Post DiFX-1.5.3

Version 1.3
~~~~~~~~~~~
* set svn properties
* mk5dir, mk5cp: use XLRGetDirectory to work around streamstor bug
* mk5dir: add --force option
* mount and dismount commands (not using DBUS yet)
* make destination directory before copy
* Mark5 maint programs testmod and vsn added
* checkdir -- ultraverbose mode (-v -v -v -v) to print nicely formatted list of scans (thanks Adam)
* remove auto-starting of the Mark5A program
* Fix compiler warnings and move to safer string manipulation
* rename .c to .cpp to reflect the fact that g++ is needed
* close popen with pclose (suggested by Martin Ettl)
* complain if /tmp or correlation destination directory are running low on space
* update in-line help for mk5control
* infrastructure in place for transient event copy
* checkdir -- allow 800 frames per second mode
* Version for DiFX-1.5.3

Version 1.2
~~~~~~~~~~~
* mk5dir -- add suffix to distinguish otherwise identically named scans
* Clean up permissions and ownership issues when spawning jobs
* Improve bankswitching
* Version for DiFX-1.5.2

Version 1.1
~~~~~~~~~~~
* XLRClose / XLROpen after XLRSelectBank to prevent read errors
* add checkdir
* Version for DiFX-1.5.1

Version 1.0
~~~~~~~~~~~
* Version for DiFX-1.5

Version 0.9
~~~~~~~~~~~
* go back to using ssh to start new processes -- ensures up-to-date enviromnent
* ignore child signal to prevent defunct processes
* use password file to get proper user ids
* spawn difxlog when starting a job
* fix dual-link network performance tracking
* option to start condition_watch upon startup

Version 0.8
~~~~~~~~~~~
* Post NRAO-DiFX 1.1 branch
* don't use tstMark5A anymore
* lots of careless bug fixes
* reenable auto getvsn
* Support for copy in mk5daemon, and support for HUP signal in mk5cp and mk5dir
* support difxStart messages
* mk5cp by exp code
* alert messages for mk5cp and mk5dir
* minor bug fixes for mk5cp and mk5dir
* send messages whenever modules are inserted or removed